--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
 <style>
+	 a{ 
+  text-decoration: none;
+  color: black; }
 	tr:hover{
 		background-color: white;
 	}
-
+ ul{overflow: none;
+    background-color:;
+    font-size:20;
+    font-family:Calibri Light ;
+    list-style-type:none;
+   } 
 	
  body{
  	background-color: #E9E9E9;
@@ -100,9 +108,17 @@
 
 
 
+<div align="center">
 
+<ul align="center" style="background-color:orange;"> 
+  <li>Designed By:</li>
+  <li style="background-color:none"><b><a href="https://www.facebook.com/Admins-105023458073115">Admins</a></b></li>
+  <li>Rajshahi Education Board Govt. Model School & College</li>
+  <li>SSC-2021&#160;&#160; HSC-2021</li>
 
-
+ <img src="oikko3.png" height="40px" width="80px">
+  </ul>
+</div>
 
 
 
