--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <button>Information</button> &nbsp;
         <button>Facebook Group</button> &nbsp;
         <button>Admins Page</button>&nbsp;
-        <button>Moderator</button>&nbsp;
+        <button>Moderators</button>&nbsp;
         <button>Adrators</button>
       
 </div>
