--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 	<h1 align="center" style="font-family: calibri;font-size: 45px";>Rajshahi Education Board  Govt. Model School & College</h1>
 	<h1 align="center" style="color:#FF1C1C; font-family: DAGGERSQUARE;" >SSC Batch 2021</h1><br>
 <div align="center">
-        <button>Home</button> &nbsp;
+        <button>  Home</button> &nbsp;
         <button>About</button> &nbsp;
         <button>Information</button> &nbsp;
-        <button>Facebook Group</button> &nbsp;
-        <button>Admins Page</button>&nbsp;
-        <button>Moderators</button>&nbsp;
-        <button>Adrators</button>
+        <button><a href="https://www.facebook.com/groups/582937509086557">Facebook Group</button> &nbsp;
+        <button><a href="https://www.facebook.com/Admins-105023458073115">Admins Page</button>&nbsp;
+        <button>Moderator Page</button>&nbsp;
+        <button>Adrators Page</button>
       
 </div>
 <br>
@@ -71,12 +71,12 @@
 
  	<tr style="background-color:#5289FF"><td>Subject &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Writer Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td> Book PDF</td></tr>
  	<tr> <td>Physics 1st Paper</td>
- 	     <td>               </td>
- 	      <td> <img src="notes2.png" height="20px" width="20px" </td>
+ 	     <td>Shahjahan Tapon</td>
+ 	      <td><a href="https://drive.google.com/file/d/1qFq1l8dBttF2fhSeLASv36nCh4kBJE4e/view"><img src="notes2.png" height="20px" width="20px" </td>
  	 </tr>
  	<tr><td>Chemistry 1st Paper</td>
- 	      <td>               </td>
- 	      <td> <img src="notes2.png" height="20px" width="20px" </td>
+ 	      <td>Hazari Nag</td>
+ 	      <td> <a href="https://drive.google.com/file/d/1aODNMVqeyhdmyKaGfsI3baQ57ydmMfEC/view>"><img src="notes2.png" height="20px" width="20px" </td>
  	</tr>
  	<tr><td>Higher Math 1st Paper</td>
  	     <td>               </td>
@@ -114,7 +114,7 @@
   <li>Designed By:</li>
   <li style="background-color:none"><b><a href="https://www.facebook.com/Admins-105023458073115">Admins</a></b></li>
   <li>Rajshahi Education Board Govt. Model School & College</li>
-  <li>SSC-2021&#160;&#160; HSC-2021</li>
+  <li>SSC-2021&#160;&#160; HSC-2023</li>
 
  <img src="oikko3.png" height="40px" width="80px">
   </ul>
